--- a/jade/meta/_layout.jade
+++ b/jade/meta/_layout.jade
@@ -55,6 +55,8 @@ html(lang="ru")
     //- script(src="//cdn.jsdelivr.net/g/backbonejs@1.2.1")
 
     //- add main script file
+    script(src="lib/react/react.min.js")
+    script(src="lib/underscore/underscore-min.js")
     script(src="js/main.js")
 
     block script
