--- a/jade/meta/_layout.jade
+++ b/jade/meta/_layout.jade
@@ -24,7 +24,7 @@ html(lang="ru")
     link(rel="icon", href="img/favicon.png", type="image/x-icon")
     link(rel="shortcut icon", href="img/favicon.png", type="image/x-icon")
 
-    link(href="http://cdn.jsdelivr.net/bootstrap/3.3.5/css/bootstrap.min.css", rel="stylesheet", media="screen")
+    link(href="lib/bootstrap/dist/css/bootstrap.min.css", rel="stylesheet", media="screen")
     link(href="css/style.css", rel="stylesheet")
 
     |<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -41,20 +41,6 @@ html(lang="ru")
     block content
     block footer
 
-    //- add library
-    //- script(src="//cdn.jsdelivr.net/g/jquery@2.1.4,bootstrap@3.3.5")
-
-    //- add tools
-    //- script(src="//cdn.jsdelivr.net/g/underscorejs@1.8.3")
-    //- script(src="//cdn.jsdelivr.net/g/sugar@1.5.0")
-
-    //- add plugin
-    //- script(src="//cdn.jsdelivr.net/g/jquery.formstyler@1.7.2")
-
-    //- add MVC
-    //- script(src="//cdn.jsdelivr.net/g/backbonejs@1.2.1")
-
-    //- add main script file
     script(src="lib/react/react.min.js")
     script(src="lib/underscore/underscore-min.js")
     script(src="js/main.js")
